--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -93,3 +93,27 @@
   transform: scale(1.1);
   transition-duration: 0.3s;
 }
+
+// 参加申請フォーム
+
+.under {
+  margin: 10px 0 10px 0;
+}
+
+.panel-heading {
+    cursor: pointer;
+}
+
+.accordion-toggle a:after {
+    font-family: 'Glyphicons Halflings';
+    content:"\e113";
+    float: right;
+    color: inherit;
+}
+
+.accordion-toggle a.collapsed:after {
+    font-family: 'Glyphicons Halflings';
+    content:"\e114";
+    float: right;
+    color: inherit;
+}
