--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,120 +1,178 @@
 <% provide(:title, @tournament.name) %>
-<div class="col-md-12">
-  <% if master?(@tournament) %>
-    <div class="row justify-content-around">
-      <% unless @started %>
-        <%= link_to "参加者を全て取り消す", tournament_participants_clear_path(@tournament), method: :delete, data: { confirm: "取り消ししてよろしいですか？" }, class: "btn btn-lg btn-primary" %>
-      <% end %>
-      <%= link_to "大会を削除する", tournament_path, method: :delete, data: { confirm: "削除してよろしいですか？" }, class: "btn btn-lg btn-primary" %>
-    </div>
-  <% end %>
-  
-  <table class="table table-condensed table-hover" id="table-tournament">
-    <thead>
-      <tr class="text-center">
-        <% unless @participants.blank? %>
-          <th><%= image_tag @t["tournament"]["live_image_url"], :width => "100%", class: "mx-auto" %></th>
-        <% else %>
-          <th>参加者が登録されていないため参加者の追加を行ってください。</th>
-        <% end %>
-      </tr>
-      <tr>
-        <% unless @participants.blank? %>
-          <th><%= link_to "トーナメント画像の更新", tournament_reload_path(@tournament), class: "btn btn-lg btn-success" %></th>
-          <% if master?(@tournament) %>
-            <% unless @started %>
-              <th><%= link_to "参加者を並び替る", tournament_randomize_path(@tournament), data: { confirm: "並び替えてもいいですか？" }, class: "btn btn-lg btn-success" %></th>
-              <th><%= link_to "大会を始める", tournament_start_path(@tournament), method: :get, data: { confirm: "大会を始めてもいいですか？" }, class: "btn btn-lg btn-success" %></th>
-            <% else %>
-              <th><%= link_to "大会をやり直す", tournament_reset_path(@tournament), method: :get, data: { confirm: "大会をやり直してもいいですか？" }, class: "btn btn-lg btn-success" %></th>
-              <% if @matches_opening.blank? %>
-                <th><%= link_to "大会を終了する", tournament_finalize_path(@tournament), method: :get, data: { confirm: "大会を終了させてもいいですか？" }, class: "btn btn-lg btn-success" %></th>
-              <% end %>
-            <% end %>
-          <% end %>
-          <% unless master?(@tournament) %>
-            <th><%= link_to "開催者：#{master_tournament(@tournament).name}", master_tournament(@tournament), class: "btn btn-lg btn-success" %></th>
-          <% end %>
-        <% end %>
-      </tr>
-      <tr>
-        <th>
-          現在開催中のマッチ<br>
-          <% @matches_opening.each do |matches| %>
-            <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %>
-            <%= link_to "勝敗報告をする", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-success mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %><br>
-          <% end %>
-        </th>
-        <th>
-          終了済みのマッチ<br>
-          <% @matches_complete.each do |matches| %>
-            <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %>
-            <%= link_to "報告をやり直す", tournament_reset_match_path(@tournament, matches), method: :get, data: { confirm: "やり直しをしてもいいですか？" }, class: "btn btn-primary mb-2" if master?(@tournament) %><br>
-          <% end %>
-        </th>
-      </tr>
-    </thead>
-    
-    <% @participants.each do |participant| %>
-      <tr>
-        <td>
-          <% if participant_to_user(participant).image? %>
-            <%= image_tag participant_to_user(participant).image.to_s, class: "img-fluid img-thumbnail rounded m-1", :style => "max-width:60px;" %>
-          <% else %>
-            <%= image_tag "no-profile-image.png", class: "img-fluid img-thumbnail rounded", :style => "max-width:60px;" %>
-          <% end %>
-          <%= link_to User.find(participant.user_id).name, User.find(participant.user_id) %>
-        </td>
-        <td>
-          <%= form_with(model: @message, url: user_messages_path(current_user), local: true, method: :post) do |f| %>
-            <%= f.hidden_field :user_id, value: master_tournament(@tournament).id %>
-            <%= hidden_field_tag :user_to, participant.user_id %>
-            
-            <%= f.text_field :text, class: "form-control" %>
-            <%= f.submit "送信", class: "btn btn-primary" %>
-          <% end %>
-        </td>
-        <td>
-          <% if master?(@tournament) %>
-            <%= link_to "削除", tournament_participant_path(@tournament, participant), method: :delete,
-                data: { confirm: "削除してよろしいですか？" },
-                class: "btn btn-danger" %>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </table>
-  
-  <%= form_with(model: @message, url: user_messages_path(current_user), local: true, method: :post) do |f| %>
-              
-    <%= f.hidden_field :user_id, value: master_tournament(@tournament).id %>
-    <%= hidden_field_tag :tournament_id, @tournament.id %>
-    
-    <%= f.label "宛先" %>
-    <%= select_tag :user_to, options_from_collection_for_select(return_users_from_participants(@participants), :id, :name), include_blank: true, multiple: true, class: "form-control searchable"%>
+<div class="col-sm-12">
 
-    <%= f.label "本文" %>
-    <%= f.text_area :text, class: "form-control" %>
-    
-    <%= f.submit "メッセージを送信する", class: "btn btn-primary btn-block btn-login" %>
-  <% end %>
+  <section class="my-2">
+    <div class="accordion" id="accordion" role="tablist" aria-multiselectable="true">
+      <% unless @started %>
+        <div class="card">
+          <div class="card-header" role="tab" id="headingOne">
+            <h5 class="mb-0">
+              <a class="text-body" data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="true" aria-controls="collapseOne">
+                <button type="button" class="btn btn-primary">
+                  <% if master?(@tournament) %>
+                    参加者を追加する
+                  <% else %>
+                    大会に参加する
+                  <% end %>
+                </button>
+              </a>
+            </h5>
+          </div><!-- /.card-header -->
+          <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+              <% if master?(@tournament) #開催者用追加フォーム %>
+                <%= form_with(model: @participant, url: tournament_participants_path(@tournament), method: :post) do |f| %>
+                  <%= select_tag :players, options_from_collection_for_select(@not_yet_users, :id, :name), multiple: true, class: "form-control searchable" %>
+                  <%= f.submit "参加者追加", class: "btn btn-primary btn-block btn-login" %>
+                <% end %>
+              <% else #参加者用追加フォーム %>
+                <% unless Participant.find_by(tournament_id: @tournament.id, user_id: current_user.id) %>
+                  <%= form_with(model: @participant, url: tournament_participants_path(@tournament), method: :post) do |f| %>
+                    <%= hidden_field_tag :players, current_user.id %>
+                    <%= f.submit "この大会に参加する", data: { confirm: "大会に参加しますか？" }, class: "btn btn-primary btn-block btn-login" %>
+                  <% end %>
+                <% end %>
+              <% end %>
+            </div><!-- /.card-body -->
+          </div><!-- /.collapse -->
+        </div><!-- /.card -->
+      <% end %>
+      <% if master?(@tournament) %>
+        <div class="card">
+          <div class="card-header" role="tab" id="headingTwo">
+            <h5 class="mb-0">
+              <a class="collapsed text-body" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">
+                <button type="button" class="btn btn-primary">一括送信</button>
+              </a>
+            </h5>
+          </div><!-- /.card-header -->
+          <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
+            <div class="card-body">
+              <%= form_with(model: @message, url: user_messages_path(current_user), local: true, method: :post) do |f| %>
+            
+                <%= f.hidden_field :user_id, value: master_tournament(@tournament).id %>
+                <%= hidden_field_tag :tournament_id, @tournament.id %>
+                
+                <%= f.label "宛先" %>
+                <%= select_tag :user_to, options_from_collection_for_select(return_users_from_participants(@participants), :id, :name), include_blank: true, multiple: true, class: "form-control searchable"%>
+            
+                <%= f.label "本文" %>
+                <%= f.text_area :text, class: "form-control" %>
+                
+                <%= f.submit "メッセージを送信する", class: "btn btn-primary btn-block btn-login" %>
+              <% end %>
+            </div><!-- /.card-body -->
+          </div><!-- /.collapse -->
+        </div><!-- /.card -->
+        
+        <div class="card">
+          <div class="card-header" role="tab" id="headingThree">
+            <h5 class="mb-0">
+              <a class="collapsed text-body" data-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">
+                <button type="button" class="btn btn-primary">大会メニュー</button>
+              </a>
+            </h5>
+          </div><!-- /.card-header -->
+          <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
+            <div class="card-body">
+              <div class="row justify-content-around">
+                <% unless @started %>
+                  <%= link_to "参加者を全て取り消す", tournament_participants_clear_path(@tournament), method: :delete, data: { confirm: "取り消ししてよろしいですか？" }, class: "btn btn-lg btn-primary" %>
+                  <%= link_to "参加者を並び替る", tournament_randomize_path(@tournament), data: { confirm: "並び替えてもいいですか？" }, class: "btn btn-lg btn-success" %>
+                  <%= link_to "大会を始める", tournament_start_path(@tournament), method: :get, data: { confirm: "大会を始めてもいいですか？" }, class: "btn btn-lg btn-success" %>
+                <% else %>
+                  <%= link_to "大会をやり直す", tournament_reset_path(@tournament), method: :get, data: { confirm: "大会をやり直してもいいですか？" }, class: "btn btn-lg btn-success" %>
+                  <% if @matches_opening.blank? && @challonge["tournament"]["state"] == "underway" %>
+                    <%= link_to "大会を終了する", tournament_finalize_path(@tournament), method: :get, data: { confirm: "大会を終了させてもいいですか？" }, class: "btn btn-lg btn-success" %>
+                  <% end %>
+                <% end %>
+                <%= link_to "大会を削除する", tournament_path, method: :delete, data: { confirm: "削除してよろしいですか？" }, class: "btn btn-lg btn-primary" %>
+              </div>
+            </div><!-- /.card-body -->
+          </div><!-- /.collapse -->
+        </div><!-- /.card -->
+      <% end %>
+    </div><!-- /#accordion -->
+  </section>
   
-  <% unless @started %>
-    <% if master?(@tournament) #開催者用追加フォーム %>
-      <%= form_with(model: @participant, url: tournament_participants_path(@tournament), method: :post) do |f| %>
-        <%= f.label '参加者追加' %>
-        <%= select_tag :players, options_from_collection_for_select(@not_yet_users, :id, :name), include_blank: true, multiple: true, class: "form-control searchable" %>
-        <%= f.submit "参加者追加", class: "btn btn-primary btn-block btn-login" %>
-      <% end %>
-    <% else #参加者用追加フォーム %>
-      <% unless Participant.find_by(tournament_id: @tournament.id, user_id: current_user.id) %>
-        <%= form_with(model: @participant, url: tournament_participants_path(@tournament), method: :post) do |f| %>
-          <%= hidden_field_tag :players, current_user.id %>
-          <%= f.submit "この大会に参加する", data: { confirm: "大会に参加しますか？" }, class: "btn btn-primary btn-block btn-login" %>
+  <div class="container-fluid">
+    <div class="row justify-content-start">
+      <div class="col-lg-8 bg-light border">
+        <% if @participants.count > 1 %>
+          <%= image_tag @challonge["tournament"]["live_image_url"], :width => "100%" %>
+        <% else %>
+          <p class="text-dark">参加者は最低2人設定してください。</p>
         <% end %>
-      <% end %>
+      </div>
+      <div class="col-lg-4 bg-dark border" id="toggle-matches-opening-or-complete">
+        <div class="row justify-content-between m-1">
+          <span>現在開催中のマッチ</span><p><%= link_to "終了済", tournament_toggle_path(@tournament, :state => 'complete'), remote: true, class: "btn btn-primary" %></p>
+        </div>
+        <div class="d-none d-lg-block"><!-- 画面幅lg以上で表示 -->
+          <% if !@matches_opening.blank? %>
+            <% @matches_opening.each do |matches| %>
+              <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %>
+              <%= link_to "報告", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-success mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %><br>
+            <% end %>
+          <% else %>
+            <p>なし</p>
+          <% end %>
+        </div>
+        <div class="d-lg-none"><!-- 画面幅lg未満で表示 -->
+          <div class="container-fluid">
+            <div class="row justify-content-between">
+              <% if !@matches_opening.blank? %>
+                <% @matches_opening.each do |matches| %>
+                  <div class="col-6">
+                    <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %>
+                    <%= link_to "報告", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-success mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %>
+                  </div>
+                <% end %>
+              <% else %>
+                <p>なし</p>
+              <% end %>
+            </div>
+          </div>
+        </div><!-- d-lg-none 画面幅lg未満で表示 -->
+      </div>
+    </div>
+  </div>
+  
+  <div class="bg-transparent p-1">
+    <span class="m-2">参加者一覧</span>
+    <% @participants.each do |participant| %>
+      <div class="bg-dark border m-2">
+        <div class="container-fluid">
+          <div class="row p-1">
+            <div class="col-5">
+              <% if participant_to_user(participant).image? %>
+                <%= image_tag participant_to_user(participant).image.to_s, class: "img-fluid img-thumbnail rounded m-1", :style => "max-width:60px;" %>
+              <% else %>
+                <%= image_tag "no-profile-image.png", class: "img-fluid img-thumbnail rounded m-1", :style => "max-width:60px;" %>
+              <% end %>
+              <%= link_to User.find(participant.user_id).name, User.find(participant.user_id), class: "font-weight-bold text-whited " %>
+            </div>
+            <div class="col-5">
+              <%= form_with(model: @message, url: user_messages_path(current_user), local: true, method: :post) do |f| %>
+                <%= f.hidden_field :user_id, value: master_tournament(@tournament).id %>
+                <%= hidden_field_tag :user_to, participant.user_id %>
+                
+                <%= f.text_field :text, class: "form-control" %>
+                <%= f.submit "送信", class: "btn btn-primary" %>
+              <% end %>
+            </div>
+            <div class="col-2">
+              <% if master?(@tournament) %>
+                <%= link_to "削除", tournament_participant_path(@tournament, participant), method: :delete,
+                    data: { confirm: "削除してよろしいですか？" },
+                    class: "btn btn-danger" %>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
     <% end %>
-  <% end %>
+  </div>
 </div>
   
 <div id="report-match" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
