--- a/app/views/tournaments/edit.html.erb
+++ b/app/views/tournaments/edit.html.erb
@@ -3,6 +3,7 @@
 <% provide(:button_text, '更新') %>
 <h1><%= @tournament.name %></h1>
 
+<p class="text-right"><%= link_to "戻る", tournament_path(@tournament), class: "btn btn-primary" %></p>
 <div class="row">
   <div class="col-md-6 offset-md-3">
     <%= render 'form' %>
